# snaek

./: Cargo.toml  LICENSE  Readme.md  default.nix  flake.nix  shell.nix
assets/: snaek.aseprite
src/: main.rs  math.rs  render.rs  snake.rs  spritesheet.rs  ui.rs
src/math/: pos.rs  rect.rs  size.rs
src/render/: ascii_sheet.rs  bitmap.rs  color.rs  pixel.rs  pos.rs  size.rs  sprite.rs
src/snake/: snaeksheet.rs  spritesheet.rs
src/ui/: ascii_sheet.rs  components.rs  layout.rs
