[package]
name = "snaek"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }
minifb = "0.26.0"
owo-colors = "4.0.0"

# Make target file smaller by not generating debug symbols
[profile.dev.package."*"]
debug = false
strip = true
opt-level = 2
