[package]
name = "snaek"
description = "A snake game made almost entirely from scratch in Rust."
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }
owo-colors = "4.0.0"
rand = "0.8.5"
softbuffer = "0.4.5"

# I implemented smooth resizing on X11
winit = { git = "https://github.com/Speykious/winit", rev = "44e0b2a" }

# Make target file smaller by not generating debug symbols
[profile.dev.package."*"]
debug = false
strip = true
opt-level = 2
